--- a/src/app/account/forget-password/forget-password.component.html
+++ b/src/app/account/forget-password/forget-password.component.html
@@ -11,18 +11,18 @@
             {{message}}
         </div>
         <div class="col-md-5">
-            <form [formGroup]?="forgetForm" (ngSubmit)="RequestPassword()">
+            <form [formGroup]="forgetForm" (ngSubmit)="RequestPassword()">
                 <div class="form-group">
                     <label for="email">البريد الالكتروني</label>
                     <input type="email" formControlName="email" class="form-control" id="email"
                         placeholder="Email Address" pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$">
-                    <div *ngIf="this.forgetForm.get('email').invalid">
+                    <div *ngIf="this.forgetForm.get('email')?.invalid">
                         <div class="text-danger"
-                            *ngIf="this.forgetForm.get('email').errors.required && this.forgetForm.get('email').touched">
+                            *ngIf="this.forgetForm.get('email')?.errors?.['required'] && this.forgetForm.get('email')?.['touched']">
                             {{messageValidate.email.required}}
                         </div>
                         <div class="text-danger"
-                            *ngIf="this.forgetForm.get('email').errors.pattern && this.forgetForm.get('email').touched">
+                            *ngIf="this.forgetForm.get('email')?.errors?.['pattern'] && this.forgetForm.get('email')?.['touched']">
                             {{messageValidate.email.patt}}
                         </div>
                     </div>
