--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -11,13 +11,13 @@
             {{message}}
         </div>
         <div class="col-md-5">
-            <form [formGroup]?="loginForm" (ngSubmit)="Login()">
+            <form [formGroup]="loginForm" (ngSubmit)="Login()">
                 <div class="form-group">
                     <label for="email">البريد الالكتروني</label>
                     <input type="email" formControlName="email" class="form-control" id="email"
                         placeholder="Email Address">
                     <div class="text-danger"
-                        *ngIf="this.loginForm.get('email').invalid && this.loginForm.get('email').touched">
+                        *ngIf="this.loginForm.get('email')?.invalid && this.loginForm.get('email')?.touched">
                         {{messageValidate.email.required}}
                     </div>
                 </div>
@@ -26,8 +26,8 @@
                     <input type="password" formControlName="password" class="form-control" id="password"
                         placeholder="Password">
                     <div class="text-danger"
-                        *ngIf="this.loginForm.get('password').invalid && this.loginForm.get('password').touched">
-                        <div class="text-danger" *ngIf="this.loginForm.get('password').errors.required">
+                        *ngIf="this.loginForm.get('password')?.invalid && this.loginForm.get('password')?.touched">
+                        <div class="text-danger" *ngIf="this.loginForm.get('password')?.errors?.['required']">
                             {{messageValidate.pass.required}}
                         </div>
                     </div>
