--- a/src/app/account/passwordconfirm/passwordconfirm.component.html
+++ b/src/app/account/passwordconfirm/passwordconfirm.component.html
@@ -3,18 +3,18 @@
     <hr class="mb-4" />
     <div class="login-container">
         <div class="col-md-5">
-            <form [formGroup]?="userForm" (ngSubmit)="ResetPassword()">
+            <form [formGroup]="userForm" (ngSubmit)="ResetPassword()">
                 <div class="form-group">
                     <label for="password">كلمة المرور</label>
                     <input type="password" formControlName="password" class="form-control" id="password"
                         placeholder="Password" required minlength="6" [ngClass]!="{'is-invalid' :
-             !this.userForm.get('password').valid && this.userForm.get('password').touched}">
-                    <div class="text-danger" *ngIf="this.userForm.get('password').invalid &&
-            (this.userForm.get('password').touched || this.userForm.get('password').dirty)">
-                        <div *ngIf="this.userForm.get('password').errors.required">
+             !this.userForm.get('password').valid && this.userForm.get('password')?.touched}">
+                    <div class="text-danger" *ngIf="this.userForm.get('password')?.invalid &&
+            (this.userForm.get('password')?.touched || this.userForm.get('password')?.dirty)">
+                        <div *ngIf="this.userForm.get('password')?.errors?.['required']">
                             {{messageValidate.pass.required}}
                         </div>
-                        <div *ngIf="this.userForm.get('password').errors.minlength">
+                        <div *ngIf="this.userForm.get('password')?.errors?.['minlength']">
                             {{messageValidate.pass.minLength}}
                         </div>
                     </div>
@@ -26,13 +26,13 @@
                     <label for="passwordConfirm">تأكيد كلمة المرور</label>
                     <input type="password" formControlName="passwordConfirm" class="form-control" id="passwordConfirm"
                         placeholder="Password confirm" required minlength="6" [ngClass]!="{'is-invalid' :
-             !this.userForm.get('passwordConfirm').valid && this.userForm.get('passwordConfirm').touched}">
-                    <div class="text-danger" *ngIf="this.userForm.get('passwordConfirm').invalid &&
-            (this.userForm.get('passwordConfirm').touched || this.userForm.get('passwordConfirm').dirty)">
-                        <div *ngIf="this.userForm.get('passwordConfirm').errors.required">
+             !this.userForm.get('passwordConfirm').valid && this.userForm.get('passwordConfirm')?.touched}">
+                    <div class="text-danger" *ngIf="this.userForm.get('passwordConfirm')?.invalid &&
+            (this.userForm.get('passwordConfirm')?.touched || this.userForm.get('passwordConfirm')?.dirty)">
+                        <div *ngIf="this.userForm.get('passwordConfirm')?.errors?.['required']">
                             {{messageValidate.passConfirm.required}}
                         </div>
-                        <div *ngIf="this.userForm.get('passwordConfirm').errors.minlength">
+                        <div *ngIf="this.userForm.get('passwordConfirm')?.errors?.['minlength']">
                             {{messageValidate.passConfirm.minLength}}
                         </div>
                     </div>
